# nirv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLICATION_GUIDE.md  PUBLISH_CHECKLIST.md  README.md  STATUS.md  architecture.md
.github/workflows/: release.yml  rust.yml
docs/: cli-reference.md  configuration.md  github-actions-troubleshooting.md  github-actions-workflow.md
examples/: cross_connector.rs  nirv_sqlserver_client.rs  nirv_sqlserver_server.rs  postgres_integration.rs  sqlserver_integration.rs  sqlserver_simulation.rs
scripts/: test-workflow-integration.sh  validate-workflow.sh
src/: lib.rs  main.rs
src/cli/: cli_args.rs  cli_runner.rs  mod.rs  output_formatter.rs
src/connectors/: connector_trait.rs  file_connector.rs  mock_connector.rs  mod.rs  postgres_connector.rs  rest_connector.rs  sqlserver_connector.rs
src/engine/: dispatcher.rs  engine.rs  mod.rs  query_executor.rs  query_parser.rs  query_planner.rs
src/protocol/: mod.rs  mysql_protocol.rs  postgres_protocol.rs  protocol_trait.rs  sqlite_protocol.rs  sqlserver_protocol.rs
src/utils/: config.rs  error.rs  mod.rs  types.rs
tests/: cli_integration_tests.rs  engine_integration_tests.rs  file_connector_tests.rs  mysql_protocol_tests.rs  postgres_connector_tests.rs  postgres_integration_tests.rs  postgres_protocol_tests.rs  protocol_connection_validation_pbt.rs  query_executor_tests.rs  query_planner_tests.rs  rest_connector_tests.rs  sqlite_protocol_tests.rs  sqlserver_connector_tests.rs  sqlserver_protocol_tests.rs
