[package]
name = "nirv-engine"
version = "0.1.0"
edition = "2021"
authors = ["NIRV Team"]
description = "Universal data virtualization and compute orchestration engine"
license = "MIT"
repository = "https://github.com/nirv/nirv-engine"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlparser = "0.39"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
regex = "1.0"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "nirv"
path = "src/main.rs"

[lib]
name = "nirv_engine"
path = "src/lib.rs"