[package]
name = "nirv-engine"
version = "0.1.0"
edition = "2021"
authors = ["NIRV Team"]
description = "Universal data virtualization and compute orchestration engine"
license = "MIT"
repository = "https://github.com/nirv/nirv-engine"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlparser = "0.39"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
regex = "1.0"
base64 = "0.21"
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
walkdir = "2.4"
glob = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"
dashmap = "5.5"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "sql-browser-tokio", "bigdecimal", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
deadpool = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "nirv"
path = "src/main.rs"

[lib]
name = "nirv_engine"
path = "src/lib.rs"